Import of EBRUNI/HTML-Template-Pro-Extension-0.04 from CPAN.
gitpan-cpan-distribution: HTML-Template-Pro-Extension
gitpan-cpan-version:      0.04
gitpan-cpan-path:         EBRUNI/HTML-Template-Pro-Extension-0.04.tar.gz
gitpan-cpan-author:       EBRUNI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension HTML::Template::Extension.
 
+0.04 (2005-08-21)
+=================
+- A little optimization in calling H::T::P->param method.
+
 0.03 (2005-08-18)
 =================
 - Removed a bug.
