--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension HTML::Template::Pro::Extension.
 
+0.06 (2005-09-19)
+=================
+- Nella modalita' vanguard (%....%), ora vengono accettate solo chiavi che 
+  iniziano per una lettere [A-Za-z]
+
 0.05 (2005-09-14)
 =================
 - If you try to initialize H::T::P::Extention with some parameters that should
