--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension HTML::Template::Pro::Extension.
 
+0.08 (2005-11-02)
+=================
+- Now, when calling filters, the object is passed to filter as second parameter.
+- Removed a bug in the HEAD_BODY.pm module that cannot parse headers sometimes.
+
 0.07 (2005-09-20)
 =================
 - In vanguard mode, key can be start with an underscore (_) too because, for
