Import of EBRUNI/HTML-Template-Pro-Extension-0.10 from CPAN.
gitpan-cpan-distribution: HTML-Template-Pro-Extension
gitpan-cpan-version:      0.10
gitpan-cpan-path:         EBRUNI/HTML-Template-Pro-Extension-0.10.tar.gz
gitpan-cpan-author:       EBRUNI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension HTML::Template::Pro::Extension.
 
+0.10 (2009-10-27)
+=================
+- A change in H::T::Pro interface (probabily). I don't find anymore clear_param
+  and there is a new method called clear_params.
+
 0.09 (2006-08-19)
 =================
 - H::T::P::Extension::HEAD_BODY::header_css now return also <link...> tags with
