Import of EBRUNI/HTML-Template-Pro-Extension-0.11 from CPAN.
gitpan-cpan-distribution: HTML-Template-Pro-Extension
gitpan-cpan-version:      0.11
gitpan-cpan-path:         EBRUNI/HTML-Template-Pro-Extension-0.11.tar.gz
gitpan-cpan-author:       EBRUNI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension HTML::Template::Pro::Extension.
 
+0.11 Wed Jul 23 15:19:04 2014
+	- Update documentation
+
 0.10 (2009-10-27)
 =================
 - A change in H::T::Pro interface (probabily). I don't find anymore clear_param
